--- a/src/Recipe.module.css
+++ b/src/Recipe.module.css
@@ -9,11 +9,12 @@
   background: white;
   align-items: center;
   width: 40%;
-  background-color: rgb(62, 138, 138);
+  background-color: rgb(121, 172, 172);
 }
 
 .image {
   border-radius: 50%;
-  width: 20%;
-  height: 20%;
+  width: 27%;
+  height: 27%;
+  margin-bottom: 50px;
 }
